Mon Jun 18 18:38:43 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* matcher/mergepostlist.cc,matcher/mergepostlist.h: Add copyright
	  statements for previous commit (and update license while I'm at
	  it).

Mon Jun 18 18:24:43 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* matcher/mergepostlist.cc,matcher/mergepostlist.h: Add get_wdf()
	  method to MergePostList (just passes through the value from the
	  current postlist).  Not currently needed, but the expected
	  behaviour is obvious, and this will be needed if there's a
	  synonym postlist higher in the query tree (when synonym postlists
	  are implemented).  Also, correct a documentation comment typo.

Mon Jun 18 13:09:36 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* api/valuerangeproc.cc: Cast the first parameter to ldexp() to
	  double to fix compilation on some platforms, and add a few more
	  explanatory code comments to
	  NumberValueRangeProcessor::string_to_float()

Mon Jun 18 11:33:49 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* api/valuerangeproc.cc: Add static methods to
	  NumberValueRangeProcessor to serialise and unserialise doubles.
	  Change the code which tests a term for being a number to use
	  strtod, and accept any string which strtod thinks is a number.
	  If NumberValueRangeProcessor accepts a range, it now converts the
	  begin and end values to strings using the serialise method.
	  Also, expand some of the code comments.
	* include/xapian/queryparser.h: Add documentation comments to
	  NumberValueRangeProcessor.
	* tests/queryparsertest.cc: Update value_range2_queries to expect
	  new serialised forms in its output.  Update test_qp_value_range3
	  to test a wider range of values (including negative, fractional,
	  and more-than-single-digit).

Mon Jun 18 03:36:38 BST 2007  Olly Betts <olly@survex.com>

	* queryparser/queryparser.lemony: Fix comment typo, and add brackets
	  to make intended precedence clearer.
