@@ -1,3 +1,11 @@
+Mon Jun 18 20:15:18 BST 2007  Richard Boulton <richard@lemurconsulting.com>
+
+	* matcher/phrasepostlist.cc,matcher/phrasepostlist.h,
+	  matcher/exactphrasepostlist.cc,matcher/exactphrasepostlist.cc:
+	  Add get_wdf() methods to NearPostList, PhrasePostList and
+	  ExactPhrasePostList - these use a very rough approximation (but
+	  there's a big long comment justifying it).
+
 Mon Jun 18 18:38:43 BST 2007  Richard Boulton <richard@lemurconsulting.com>
 
 	* matcher/mergepostlist.cc,matcher/mergepostlist.h: Add copyright
